2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* kern/efi/init.c (grub_efi_init): set_watchdog_timer takes four
	arguments, not three.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (uses_abstraction): New function.
	* util/grub.d/10_linux.in: Use it to check for LVM, so that
	LVM-on-RAID is handled correctly.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Changes from GRUB Legacy): New section.
	(Future): Fix typo.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (grub_file_is_not_garbage): Sometimes
	grub.d/README accidentally ends up executable for one reason or
	another.  Ignore it.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* partmap/gpt.c (MAX_SECTOR_LOG): New definition.
	(gpt_partition_map_iterate): Support non-512B sectors.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/efi/init.c (grub_efi_init): Disable watchdog.
	Tested by: Seth Goldberg.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/multiboot.c (grub_multiboot_boot) [GRUB_USE_MULTIBOOT2]:
	Properly align mbi.
	Reported by: Seth Goldberg.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Avoid module duplication.

2010-07-01  Sean Finney  <seanius@seanius.net>

	* util/grub.d/10_linux.in: Don't use UUID for LVM root.

2010-07-01  Sean Finney  <seanius@seanius.net>

	* disk/lvm.c (grub_lvm_scan_device): Skip snapshots.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/lvm.c (grub_lvm_checkvalue): New function.
	(grub_lvm_check_flag): Likewise.

2010-07-01  Robert Millan  <rmh@gnu.org>

	* kern/emu/hostdisk.c (convert_system_partition_to_system_disk):
	Support 'p' as partition separator on kernel of FreeBSD (used
	with GPT labels).
	(grub_util_biosdisk_get_grub_dev): Likewise.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Yeeloong firmware port.

	* boot/mips/yeeloong/fwstart.S: New file.